<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">吃什么</string>
<string name="name">名称 :</string>
<string name="location">位置 :</string>
<string name="price">价格 :</string>
<string name="assessment">评价:</string>
<string name="recommendation">推荐搭配:</string>
<string name="businesshours">营业时间:</string>
<string name="remarks">备注:</string>
<string name="save"> 保存 </string>
<string name="cancel"> 取消 </string>
<string name="food_edit">Edit Food</string>
<string name="food_create">创建美食</string>
<string name="error_msg">美食信息错误</string>
<string name="menu_revert">回退</string>
<string name="menu_delete">删除</string>
<string name="menu_discard">放弃</string>
<string name="menu_add">增加美食</string>
<string name="menu_edit">编辑美食</string>
</resources>