<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15dp" >
        </TextView>

        <EditText
            android:id="@+id/EditText01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:id="@+id/TableRow02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="15dp" >
        </TextView>

        <EditText
            android:id="@+id/EditText02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/TableRow03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="15dp" >
        </TextView>

        <EditText
            android:id="@+id/EditText03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" >
        </EditText>
    </TableRow>
    
    <TableRow
        android:id="@+id/TableRow04"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assessment"
            android:textSize="15dp" >
        </TextView>

        <EditText
            android:id="@+id/EditText04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" >
        </EditText>
    </TableRow>
    <TableRow
        android:id="@+id/TableRow05"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommendation"
            android:textSize="15dp" >
        </TextView>

        <EditText
            android:id="@+id/EditText05"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </EditText>
    </TableRow>
    <TableRow
        android:id="@+id/TableRow06"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/businesshours"
            android:textSize="15dp" >
        </TextView>

        <EditText
            android:id="@+id/EditText06"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </EditText>
    </TableRow>
    <TableRow
        android:id="@+id/TableRow07"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remarks"
            android:textSize="15dp" >
        </TextView>

        <EditText
            android:id="@+id/EditText07"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/TableRow08"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Button01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="15dp" >
        </Button>

        <Button
            android:id="@+id/Button02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="15dp" >
        </Button>
    </TableRow>

</LinearLayout>